# picoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VERBOSE_DEBUG.md  bak.expression.c  bak.expression.h  bak.parse.h  clibrary.c  clibrary.h  debug.c  engine.c  engine.h  expression.c  expression.h  expression_assign.c  expression_assign.h  expression_call.c  expression_call.h  expression_coerce.c  expression_coerce.h  expression_operator.c  expression_operator.h  expression_stack.c  expression_stack.h  files.txt  heap.c  heap.h  include.c  include.h  interpreter.h  itrapc.c  itrapc.h  lex.c  lex.h  parse.c  parse.h  parse_control.c  parse_control.h  parse_declaration.c  (+17 more)
cstdlib/: CMakeLists.txt  errno.c  math.c  sources.cmake  stdbool.c  stdio.c  stdlib.c  string.c  time.c  unistd.c
docs/: trapc.md
kloc/: kloc.cpp
msvc/: CMakeLists.txt
platform/: CMakeLists.txt  library_msvc.c  platform_msvc.c  sources.cmake
test/: test_ctor.c  test_dot_this.c  test_get_set.c  test_member_function.c  test_puts.c  test_scope.c  test_scoper.c  test_setx.c
test/csmith/: CMakeLists.txt
test/jpoirier/: CMakeLists.txt
test/rrowe/: bash_member_functions.txt  test_bare_dot.c  test_function.c  test_mangle.c  test_member_function.c  test_member_functions.c  test_puts.c  test_simple.c
tests/: CMakeLists.txt  sources.cmake
tests/csmith/: sources.cmake
tests/jpoirier/: sources.cmake
